--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+bin/
 *.class
 
 # Mobile Tools for Java (J2ME)
@@ -10,3 +11,27 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/bin/
+/classes/
+
+# Gradle configuration
+.gradle/
+
+# Gradle build directory
+build/
+
+# Eclipse build directory
+classes/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+#
